# deepwiki-ForMe

./: Dockerfile  README.md  README.zh.md  docker-compose.yml
api/config/: embedder.json
deepwiki-mcp/: pyproject.toml
deepwiki-mcp/deepwiki_mcp/: __init__.py  http_backend.py  rag_backend.py  schemas.py  server.py  settings.py
deepwiki-mcp/deepwiki_mcp/tools/: __init__.py  ask_repo.py  get_local_repo_structure.py  list_processed_projects.py  retrieve_context.py
src/app/[owner]/[repo]/: page.tsx
src/app/[owner]/[repo]/slides/: page.tsx
src/app/[owner]/[repo]/workshop/: page.tsx
src/utils/: websocketClient.ts
